--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
     "@elysiajs/swagger": "^1.3.1",
+    "@supabase/supabase-js": "^2.55.0",
     "elysia": "latest"
   },
   "devDependencies": {
