--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
+    "@elysiajs/jwt": "^1.4.0",
     "@elysiajs/swagger": "^1.3.1",
     "@supabase/supabase-js": "^2.55.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "elysia": "latest"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "bun-types": "latest"
   },
   "module": "src/index.js"
